[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://GUI/InventoryFooter.gd" type="Script" id=2]
[ext_resource path="res://sfx/shh.wav" type="AudioStream" id=3]
[ext_resource path="res://sfx/TemporarySound.tscn" type="PackedScene" id=4]

[node name="Footer" type="MarginContainer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -100.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="Vbox" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 100.0
mouse_filter = 2
custom_constants/separation = 10
alignment = 1

[node name="InventoryButton" type="Button" parent="Vbox"]
margin_left = 475.0
margin_right = 548.0
margin_bottom = 20.0
size_flags_horizontal = 4
toggle_mode = true
text = "Inventory"

[node name="Inventory" type="GridContainer" parent="Vbox"]
margin_left = 385.0
margin_top = 30.0
margin_right = 639.0
margin_bottom = 100.0
grow_horizontal = 2
mouse_filter = 2
size_flags_horizontal = 4
custom_constants/hseparation = 20
columns = 10

[node name="InventoryButton" type="Button" parent="Vbox/Inventory"]
margin_right = 117.0
margin_bottom = 70.0
text = "Item1"
icon = ExtResource( 1 )

[node name="InventoryButton2" type="Button" parent="Vbox/Inventory"]
margin_left = 137.0
margin_right = 254.0
margin_bottom = 70.0
text = "Item2"
icon = ExtResource( 1 )

[node name="InventoryOpenNoise" parent="." instance=ExtResource( 4 )]
stream = ExtResource( 3 )
volume_db = -20.0

[connection signal="toggled" from="Vbox/InventoryButton" to="." method="_on_InventoryButton_toggled"]
